# papercraft

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  ImGuiFileDialogWrapper.h  README.md  build.rs  messages.po
.github/workflows/: build.yml  build_linux.yml  build_linux_arm.yml  build_macos.yml  build_release.yml  build_win32.yml  build_win32native.yml  build_win64.yml  build_win64native.yml  manual_release.yml  release.yml  test.yml
distro/: .gitignore  PKGBUILD  makeappimage  makelinux  makewin32  makewin64  papercraft.desktop  papercraft.xml  win32env  win64env
distro/docker/: Dockerfile  apprun  build_cairo  g++  makeappimage
distro/macos/: Info.plist  buildiconset
examples/: BunnyLamp.craft  bulbasaur.craft  charmander.craft  die.craft  pikachu.craft
locales/: de.po  es.po  fr.po  ja.po  messages.pot
res/: manifest.xml  resource.rc
src/: Karla-Regular.ttf.z  config.rs  copyright.ttf.z  dialogs.ui  glr.rs  imgui_filedialog.rs  main.rs  main_.rs  main_ui.rs  menu.ui  options_dlg.rs  paper.rs  papercraft.rs  pdf_metrics.rs  printable.rs  semaphore.rs  tessellate.rs  ui.rs  util_3d.rs  util_gl.rs  version.rs
src/paper/: craft.rs  mod.rs  model.rs
src/paper/craft/: file.rs  update.rs
src/paper/model/: formats.rs
src/paper/model/formats/: gltf.rs  pepakura.rs  stl.rs  waveobj.rs
src/paper/model/formats/gltf/: data.rs  exporter.rs  importer.rs
src/paper/model/formats/pepakura/: data.rs
src/paper/model/formats/stl/: data.rs  importer.rs
src/paper/model/formats/waveobj/: data.rs  exporter.rs  importer.rs
src/paper/model/import/: mod.rs
src/paper/model/import/gltf/: data.rs  importer.rs  mod.rs
src/paper/model/import/pepakura/: data.rs  importer.rs  mod.rs
src/paper/model/import/stl/: data.rs  importer.rs  mod.rs
src/paper/model/import/waveobj/: data.rs  exporter.rs  importer.rs  mod.rs
src/pepakura/: mod.rs
src/shaders/: 2d.vert  3d.vert  color.frag  line.frag  paper_line.glsl  paper_line_dot.glsl  paper_solid.glsl  quad.frag  quad.glsl  quad.vert  scene_line.glsl  scene_solid.glsl  solid.frag  text.glsl
src/waveobj/: mod.rs
