[package]
name = "papercraft"
version = "2.7.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/rodrigorc/papercraft"
description = "Papercraft is a tool to unwrap 3D models"
keywords = ["papercraft", "handcraft"]

[profile.release]
strip = "symbols"
lto = true

[features]
# In linux this is basically free, but in Windows this adds a bunch of dependencies
# for little gain.
freetype=["easy-imgui-window/freetype"]

[profile.dev.package.image]
opt-level = 3
[profile.dev.package.zip]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3

[build-dependencies]
cc = "1"
bindgen = "0.69"

[dependencies]
cgmath = { version = "0.18", features = ["mint"] }
anyhow = "1"
base64 = "0.22"
slotmap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
zip = "0.6"
memoffset = "0.9"
bitflags = "2"
mint = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
clap = { version = "4", features = ["derive", "cargo"] }
log = "0.4"
env_logger = "0.11"
flate2 = "1"
fxhash = "0.2"
signal-hook = "0.3"
opener = { version = "0.7", default-features = false }
maybe-owned = { version = "0.3", features = ["serde"] }
lazy_static = "1"

# Use my fork of printpdf for now, that depends on image-0.25
printpdf = { version = "0.7", features = ["embedded_images"], git = "https://github.com/rodrigorc/printpdf", rev = "6dcdb4d53e64d98feb91c51f717480dbddb57d7d" }

easy-imgui-sys = "0.6"
easy-imgui-window = "0.6"
easy-imgui-filechooser = "0.1"
